src/objects/Opportunity_Accounts__c.object
<CustomObject>
    <description>Created for Coil Asia to allow for tracking of front-end customers and spray companies in the constructions projects lifecycle.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Accounts</relationshipLabel>
        <relationshipName>Opportunity_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>For Coil Asia</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>For Coil Asia to link multiple accounts to an opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Opportunity_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer-Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer-Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer-Curtain Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spray Company-Aluminum Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spray Company-Aluminum Veneer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Accounts</label>
    <nameField>
        <displayFormat>AO {0000000}</displayFormat>
        <label>Opportunity Accounts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>